# EvalCheck42

./: .gitignore  README.md  eval_check.py  pyproject.toml
evalcheck/: checks.py
evalcheck42/: checks.py  filesystem.py  main.py  output_utils.py
