[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalcheck42"
version = "0.6.0"
description = "A pre-evaluation checker for 42 school projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ahmad Nashwan", email = "ahmad.nashwan.07@gmail.com" }
]

[project.scripts]
evalcheck = "evalcheck42.main:main"